// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icon Component snapshots should match snapshot 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Icon
    color="inherit"
    height="1em"
    name="caret-down"
    strokeWidth={1}
    width="1em"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <use
        xlinkHref="/iconsprite.svg#icon-caret-down"
      />,
      "className": "ft-icon",
      "fill": "inherit",
      "height": "1em",
      "stroke": undefined,
      "strokeWidth": 1,
      "width": "1em",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "xlinkHref": "/iconsprite.svg#icon-caret-down",
      },
      "ref": null,
      "rendered": null,
      "type": "use",
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <use
          xlinkHref="/iconsprite.svg#icon-caret-down"
        />,
        "className": "ft-icon",
        "fill": "inherit",
        "height": "1em",
        "stroke": undefined,
        "strokeWidth": 1,
        "width": "1em",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "xlinkHref": "/iconsprite.svg#icon-caret-down",
        },
        "ref": null,
        "rendered": null,
        "type": "use",
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getSnapshotBeforeUpdate": true,
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`Icon Component snapshots should match snapshot 2`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Icon
    color="inherit"
    fill="orange"
    height="1em"
    name="caret-down"
    strokeWidth={1}
    width="1em"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <use
        xlinkHref="/iconsprite.svg#icon-caret-down"
      />,
      "className": "ft-icon",
      "fill": "orange",
      "height": "1em",
      "stroke": undefined,
      "strokeWidth": 1,
      "width": "1em",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "xlinkHref": "/iconsprite.svg#icon-caret-down",
      },
      "ref": null,
      "rendered": null,
      "type": "use",
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <use
          xlinkHref="/iconsprite.svg#icon-caret-down"
        />,
        "className": "ft-icon",
        "fill": "orange",
        "height": "1em",
        "stroke": undefined,
        "strokeWidth": 1,
        "width": "1em",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "xlinkHref": "/iconsprite.svg#icon-caret-down",
        },
        "ref": null,
        "rendered": null,
        "type": "use",
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getSnapshotBeforeUpdate": true,
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`Icon Component snapshots should match snapshot 3`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Icon
    color="inherit"
    height="20"
    name="caret-down"
    strokeWidth={1}
    style={
      Object {
        "background": "khaki",
        "fill": "navy",
      }
    }
    width="100"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <use
        xlinkHref="/iconsprite.svg#icon-caret-down"
      />,
      "className": "ft-icon",
      "fill": "inherit",
      "height": "20",
      "stroke": undefined,
      "strokeWidth": 1,
      "style": Object {
        "background": "khaki",
        "fill": "navy",
      },
      "width": "100",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "xlinkHref": "/iconsprite.svg#icon-caret-down",
      },
      "ref": null,
      "rendered": null,
      "type": "use",
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <use
          xlinkHref="/iconsprite.svg#icon-caret-down"
        />,
        "className": "ft-icon",
        "fill": "inherit",
        "height": "20",
        "stroke": undefined,
        "strokeWidth": 1,
        "style": Object {
          "background": "khaki",
          "fill": "navy",
        },
        "width": "100",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "xlinkHref": "/iconsprite.svg#icon-caret-down",
        },
        "ref": null,
        "rendered": null,
        "type": "use",
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getSnapshotBeforeUpdate": true,
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`Icon Component snapshots should match snapshot 4`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Icon
    color="inherit"
    height="50"
    name="caret-down"
    strokeWidth={1}
    style={
      Object {
        "background": "khaki",
        "fill": "navy",
      }
    }
    width="20"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <use
        xlinkHref="/iconsprite.svg#icon-caret-down"
      />,
      "className": "ft-icon",
      "fill": "inherit",
      "height": "50",
      "stroke": undefined,
      "strokeWidth": 1,
      "style": Object {
        "background": "khaki",
        "fill": "navy",
      },
      "width": "20",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "xlinkHref": "/iconsprite.svg#icon-caret-down",
      },
      "ref": null,
      "rendered": null,
      "type": "use",
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <use
          xlinkHref="/iconsprite.svg#icon-caret-down"
        />,
        "className": "ft-icon",
        "fill": "inherit",
        "height": "50",
        "stroke": undefined,
        "strokeWidth": 1,
        "style": Object {
          "background": "khaki",
          "fill": "navy",
        },
        "width": "20",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "xlinkHref": "/iconsprite.svg#icon-caret-down",
        },
        "ref": null,
        "rendered": null,
        "type": "use",
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getSnapshotBeforeUpdate": true,
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;
